SERVER-58143 shardsvrDropCollectionParticipant should be killable on stepdown