src/mongo/db/s/drop_collection_coordinator.cpp
@@ -70,18 +70,17 @@ boost::optional<BSONObj> DropCollectionCoordinator::reportForCurrentOp(
 
 DropReply DropCollectionCoordinator::dropCollectionLocally(OperationContext* opCtx,
                                                            const NamespaceString& nss) {
-    DropReply result;
-    uassertStatusOK(dropCollection(
-        opCtx, nss, &result, DropCollectionSystemCollectionMode::kDisallowSystemCollectionDrops));
-
     {
-        // Clear the CollectionShardingRuntime entry
-        UninterruptibleLockGuard noInterrupt(opCtx->lockState());
+        // Clear CollectionShardingRuntime entry
         Lock::DBLock dbLock(opCtx, nss.db(), MODE_IX);
         Lock::CollectionLock collLock(opCtx, nss, MODE_IX);
         auto* csr = CollectionShardingRuntime::get(opCtx, nss);
         csr->clearFilteringMetadata(opCtx);
     }
+
+    DropReply result;
+    uassertStatusOK(dropCollection(
+        opCtx, nss, &result, DropCollectionSystemCollectionMode::kDisallowSystemCollectionDrops));
 
     // Force the refresh of the catalog cache to purge outdated information
     const auto catalog = Grid::get(opCtx)->catalogCache();
